--- a/factions.html
+++ b/factions.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="factions.html">Factions</a></li>
                 <li><a href="battle-reports.html">Battle Reports</a></li>
-                <li><a href="map.html">The Ravaged Map</a></li>
+                <li><a href="map.html">The Ravaged Coast</a></li>
             </ul>
         </nav>
 
