added battle report page - under construction

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="factions.html">Factions</a></li>
-            <li><a href="#">Battle Reports</a></li>
+            <li><a href="battle-reports.html">Battle Reports</a></li>
             <li><a href="map.html">The Ravaged Coast</a></li>
             </ul>
         </nav>
