Added gif to battle report page. added footer to home page.

--- a/battle-reports.html
+++ b/battle-reports.html
@@ -30,6 +30,10 @@
         <div class="skaven-graffiti skaven-shake">
             <p>Soon-soon the stories of ruin-blood conquest will fill this page, yes-yes!</p>
         </div>
+
+        <div class="under-construction-gif">
+            <img src="images/SkavenGif.gif" alt="Under Construction Skaven" />
+        </div>
     </div>   
 
 </body>
