--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
                 </p>
             </section>
 
+            <h2> Current sitrep at the Ravaged Coast. </h2>
             <img src="images/campaign_map.jpg" alt="Ravaged Coast Campaign Map" class="map">
         </main>
+
+        <footer>
+            <p>
+                This site is a work in progress. Updates incoming!
+            </p>
+        </footer>
 
         </div>
 </body>
