Created rules Page. Embeded Map and Rules.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="factions.html">Factions</a></li>
             <li><a href="battle-reports.html">Battle Reports</a></li>
             <li><a href="map.html">The Ravaged Coast</a></li>
+            <li><a href="rules.html">Rules</a></li>
             </ul>
         </nav>
 
@@ -35,7 +36,9 @@
             </section>
 
             <h2> Current sitrep at the Ravaged Coast. </h2>
-            <img src="images/campaign_map.jpg" alt="Ravaged Coast Campaign Map" class="map">
+            <a href="https://api2.inkarnate.com/api/embedScenes/dDJk2G/previewImage">
+            <img src="https://api2.inkarnate.com/api/embedScenes/dDJk2G/previewImage" alt="Ravaged Coast Campaign Map" class="map">
+            </a>
         </main>
 
         <footer>
