--- a/battle-reports.html
+++ b/battle-reports.html
@@ -1,3 +1,4 @@
+<!-- Battle Reports for Ravaged Coast campaign -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +17,7 @@
             <li><a href="factions.html">Factions</a></li>
             <li><a href="battle-reports.html">Battle Reports</a></li>
             <li><a href="map.html">Map</a></li>
+            <li><a href="rules.html">Rules</a></li>
         </ul>
         </nav>
     </header>
