--- a/map.html
+++ b/map.html
@@ -1,3 +1,4 @@
+<!-- map pages for Ravaged Coast campaign -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,6 +21,7 @@
                 <li><a href="factions.html">Factions</a></li>
                 <li><a href="battle-reports.html">Battle Reports</a></li>
                 <li><a href="map.html">The Ravaged Coast</a></li>
+                <li><a href="rules.html">Rules</a></li>
             </ul>
         </nav>
 
