embeded PtG trailer on homepage. fixed batte reports nav bar.

--- a/battle-reports.html
+++ b/battle-reports.html
@@ -16,7 +16,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="factions.html">Factions</a></li>
             <li><a href="battle-reports.html">Battle Reports</a></li>
-            <li><a href="map.html">Map</a></li>
+            <li><a href="map.html">The Ravaged Coast</a></li>
             <li><a href="rules.html">Rules</a></li>
         </ul>
         </nav>
