--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
                 </p>
             </section>
 
-            <h2> Current sitrep at the Ravaged Coast. </h2>
+            <iframe width="860" height="515" src="https://www.youtube.com/embed/Pz7UPp1gjOw?si=ElIXNMgi6v1YP7c9" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
+
+            <h2 style="padding-top: 20px;"> Current sitrep at the Ravaged Coast. </h2>
             <a href="https://api2.inkarnate.com/api/embedScenes/dDJk2G/previewImage">
             <img src="https://api2.inkarnate.com/api/embedScenes/dDJk2G/previewImage" alt="Ravaged Coast Campaign Map" class="map">
             </a>
